# TimelineVideos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appicon.rc  installer.nsi  installer.wxs  resources.qrc
locales/: ar.json  en.json
src/: i18n.cpp  i18n.h  main.cpp  mainwindow.cpp  mainwindow.h  themes.cpp  themes.h
src/database/: dbmanager.cpp  dbmanager.h
src/player/: controls.cpp  controls.h  vlcplayer.cpp  vlcplayer.h
src/playlist/: manager.cpp  manager.h  scanner.cpp  scanner.h
src/utils/: logger.cpp  logger.h  thumbnail.cpp  thumbnail.h  timeutils.cpp  timeutils.h  workers.cpp  workers.h
src/widgets/: playlistinfo.cpp  playlistinfo.h  sidebar.cpp  sidebar.h  timelinebar.cpp  timelinebar.h  toolbar.cpp  toolbar.h  videolist.cpp  videolist.h
